# GetFrame

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  config.docker.yaml  config.example.yaml  docker-compose.yml
.cargo/: config.toml
.cargo/patches/ffmpeg-next/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
.cargo/patches/ffmpeg-sys-next/: .cargo_vcs_info.json  Cargo.toml  build.rs
.github/workflows/: ci.yml
.planning/: PERFORMANCE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/02-multi-stream-management/: PLAN.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
deploy/grafana/: getframe-dashboard.json
migrations/: 20260526_000001_initial.sql  20260527_000001_horizontal_scaling.sql  20260528_000001_metrics_and_events.sql
scripts/: build.ps1
src/: config.rs  health.rs  lib.rs  logging.rs  main.rs  metrics.rs  types.rs
src/api/: metrics.rs  mod.rs  rules.rs  streams.rs  tasks.rs
src/benchmark/: mod.rs  synthetic.rs
src/db/: metrics_history.rs  mod.rs  streams.rs  task_events.rs  tasks.rs
src/kafka/: mod.rs  schema.rs  schema_registry.rs
src/pipeline/: decode.rs  encode.rs  filter.rs  ingest.rs  mod.rs  pin.rs  rule.rs
src/storage/: mod.rs  retention.rs
src/stream/: health.rs  mod.rs  registry.rs
src/task/: mod.rs  registry.rs
src/worker/: mod.rs
tests/: api_health.rs  api_metrics.rs  api_streams.rs  api_tasks.rs  db_events.rs  db_metrics.rs  db_streams.rs  db_tasks.rs  openapi_spec.rs  pipeline_decode.rs  task_api.rs
tests/common/: api.rs  db.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css
(+59 files in other folders)
