[package]
name = "getframe-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
tokio-util = "0.7"
futures = "0.3"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs", "cors"] }
ffmpeg-next = "8.1.0"
yuvutils-rs = "0.8"
rdkafka = { version = "0.39.0", features = ["tokio", "cmake-build"] }
apache-avro = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
anyhow = "1"
thiserror = "2"
bytes = "1"
clap = { version = "4", features = ["derive"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = "1"
aws-credential-types = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
http-body-util = "0.1"

[patch.crates-io]
ffmpeg-next = { path = ".cargo/patches/ffmpeg-next" }
ffmpeg-sys-next = { path = ".cargo/patches/ffmpeg-sys-next" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
